# trae2

1/: collector.go  config.go  config.yaml  db_operator.go  go.mod  main.go  message_queue.go  mqtt_client.go
10/: .gitignore  package-lock.json  package.json
100/: Cargo.toml  README.md
100/config/: clusters.yaml
100/src/: cli.rs  cluster_connection.rs  config.rs  container_status.rs  diagnostics.rs  log_extract.rs  main.rs  report.rs  resource_stats.rs  storage.rs
101/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
105/: NETWORK_PROTOCOL.md  PROJECT_README.md  project.godot
106/: .gitignore  README.md  package.json
106/cpp-backend/: CMakeLists.txt
106/cpp-backend/include/printer/driver/: IDriverAdapter.h
106/cpp-backend/include/printer/platform/: IPlatform.h  PlatformExport.h
106/cpp-backend/include/printer/status/: StatusCollector.h
106/cpp-backend/include/printer/task/: TaskQueue.h
106/cpp-backend/include/printer/template/: TemplateManager.h
106/cpp-backend/src/driver/: GenericDriver.cpp
106/cpp-backend/src/platform/: LinuxPlatform.cpp  PlatformFactory.cpp  WindowsPlatform.cpp
106/cpp-backend/src/status/: StatusCollector.cpp
106/cpp-backend/src/task/: TaskQueue.cpp
106/cpp-backend/src/template/: TemplateManager.cpp
107/: README.md
108/: requirements.txt  run.bat
109/: README.md
11/: package.json
12/: .env.example  .gitignore  package.json
14/: .env.example  requirements.txt  setup.py  test_fixes.py  test_import.py  test_performance.py  verify_upgrade.py
15/: package-lock.json  package.json  server.js
16/: package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
17/: index.html  package.json  vite.config.js
18/: .env.example  deploy.sh  example_usage.py  install.sh  main.py  requirements.txt  start.sh  stop_words.txt
19/: index.html  package-lock.json  package.json
2/: auth.go  cache.go  core.go  datasource.go  federated_test.go  go.mod  merge.go  parser.go  slowlog.go
20/: README.md  config.example.yaml  requirements.txt  setup.py
22/: package.json  start-cluster.bat
23/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.json
24/: app.js  cache_manager.js  callback_module.js  config.js  logger.js  package.json  resource_scheduler.js  stream_accessibility_checker.js  stream_metadata_validator.js  stream_validation_cache.js  stream_validator.js  task_router.js  transcode_manager.js  url_validator.js
25/: data.db  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
26/: README.md  package-lock.json  package.json
27/: anomaly_detector.py  config.py  data_comparator.py  data_parser.py  data_structures.py  main.py  parallel_kernel.py  remote_executor.py  requirements.txt  task_scheduler.py  test_phase3.py  trajectory_fitting.py  utils.py  visualization.py
28/: PROJECT_STRUCTURE.md  main.py  requirements.txt  test_enhanced_features.py  test_optimizations.py  test_simulation.py
29/: README.md  start.bat
3/: README.md  package.json
30/: README.md  package-lock.json  package.json
31/: main.py  report_sample_milling_20260527_131059.html  report_test_20260527_131036.html  requirements.txt  setup.py  test_full_sim.txt  test_motion.py  test_sim_output.txt
32/: _test_empty_pwd.slp  _test_enc.slp  _test_encrypt.slp  _test_large.slp  _test_new_enc.slp  _test_new_plain.slp  _test_plain.slp  _test_space_pwd.slp  _test_truncated.slp  requirements.txt  run.py
33/: README.md  index.html  package.json  vite.config.ts
34/: package-lock.json  package.json
36/: audio_slicer.py  audio_stream.py  classifier.py  config.py  denoise.py  feature_extraction.py  main.py  model_finetune.py  pipeline_engine.py  requirements.txt  sample_manager.py  storage.py  test_fixes.py  test_upgrade.py
37/: index.html  package-lock.json  package.json
38/: package-lock.json  package.json  vite.config.ts
39/: communication.py  config.py  config.yaml  disk_check.py  log_summary.py  main.py  node_manager.py  scheduler.py  service_check.py
4/: .sys-tool.json  check.js  enhanced-report.html  index.js  package-lock.json  package.json  report.js  scan.js  (+4 more)
86/: .gitignore  Cargo.toml  index.html  package.json  tsconfig.json  vite.config.ts
86/configs/: default.json  embedded-linux.json  industrial-control.json  server-monitor.json
86/electron/main/: index.ts
86/electron/preload/: index.ts
86/native/collector/: Cargo.toml
86/native/collector/src/: lib.rs
86/native/config/: Cargo.toml
86/native/config/src/: lib.rs
86/native/core/: Cargo.toml
86/native/core/src/: lib.rs
86/native/hal/: Cargo.toml
86/native/hal/src/: lib.rs
86/native/napi/: Cargo.toml
86/native/napi/src/: lib.rs
86/native/platform/: Cargo.toml
86/native/platform/src/: lib.rs
86/native/reporter/: Cargo.toml
86/native/reporter/src/: lib.rs
86/src/: App.vue  main.ts
86/src/components/common/: AlertPopup.vue  DataTable.vue  NotificationList.vue  StatCard.vue
86/src/components/layout/: Header.vue  Sidebar.vue
86/src/stores/: alert.ts  app.ts  config.ts  hardware.ts  reporter.ts
86/src/styles/: global.scss
86/src/types/: index.ts
86/src/views/: ConfigPage.vue  Dashboard.vue  ReporterPage.vue  SchedulePage.vue
96/frontend/: CMakeLists.txt
96/frontend/src/: MainWindow.cpp  MainWindow.h  main.cpp
96/frontend/src/models/: CommandModel.cpp  CommandModel.h  DeviceModel.cpp  DeviceModel.h  ScheduledModel.cpp  ScheduledModel.h  StatusModel.cpp  StatusModel.h  TemplateModel.cpp  TemplateModel.h
96/frontend/src/panels/: AlertDialog.cpp  AlertDialog.h  CommandPanel.cpp  CommandPanel.h  DashboardPanel.cpp  DashboardPanel.h  DevicePanel.cpp  DevicePanel.h  SchedulePanel.cpp  SchedulePanel.h  StatusPanel.cpp  StatusPanel.h  TemplatePanel.cpp  TemplatePanel.h
96/frontend/src/platform/: PlatformAdapter.cpp  PlatformAdapter.h
96/frontend/src/resources/: resources.qrc
96/frontend/src/services/: ApiClient.cpp  ApiClient.h  WebSocketClient.cpp  WebSocketClient.h
(+3393 files in other folders)
