[package]
name = "container-inspector"
version = "1.0.0"
edition = "2021"
description = "容器集群资源巡检命令行工具集"
authors = ["Container Inspector Team"]

[[bin]]
name = "cinspect"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
tabwriter = "1.2"
colored = "2.0"
regex = "1.10"
futures = "0.3"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
