[workspace]
members = [
    "native/core",
    "native/hal",
    "native/collector",
    "native/reporter",
    "native/config",
    "native/platform",
    "native/napi"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hardware-monitor/suite"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
config = { version = "0.14", features = ["json", "yaml"] }
sysinfo = "0.30"
heim = { version = "0.1", features = ["full"] }
async-trait = "0.1"
hostname = "0.3"
napi = { version = "2.16", features = ["napi4"] }
napi-derive = "2.16"
napi-build = "2.1"
winapi = { version = "0.3", features = ["winbase", "winreg", "psapi", "sysinfoapi"] }
libc = "0.2"
tempfile = "3.0"
flate2 = "1.0"
