[package]
name = "collector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../core" }
hal = { path = "../hal" }
config = { path = "../config" }
platform = { path = "../platform" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
