[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
