[package]
name = "hal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../core" }
serde = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
