[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../core" }
hal = { path = "../hal" }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
