[package]
name = "reporter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../core" }
config = { path = "../config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
flate2 = { workspace = true }
